src/test/deca/syntax/valid/provided/2println.deca
// Description:
//    Programme  avec deux println.


{
        println("Hello");
        println("Hello2");
}
