src/test/deca/syntax/invalid/provided/println_sanspointvirgule.deca
// Description:
//   println icomplet: sans point virgule


{
        println()
}
